[package]
name    = "blob-logger-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[lib]
name = "blob_logger_rust"
path = "src/lib.rs"

[[example]]
name = "smoke_test"
path = "examples/smoke_test.rs"

[[example]]
name = "load_test_gcs"
path = "examples/load_test_gcs.rs"

[[bench]]
name    = "throughput"
harness = false

[dependencies]
tokio             = { version = "1", features = ["full"] }
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
object_store      = { version = "0.11", features = ["gcp"] }
bytes             = "1"
nix               = { version = "0.29", features = ["fs", "mman"] }
regex             = "1"
chrono            = { version = "0.4", features = ["std"] }
thiserror         = "1"
parking_lot       = "0.12"
crossbeam-channel = "0.5"
dashmap           = "6"
rand              = "0.8"

[dev-dependencies]
tokio-test   = "0.4"
tempfile      = "3"
criterion     = { version = "0.5", features = ["async_tokio"] }
futures       = "0.3"
async-trait   = "0.1"
